--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /.bundle
 
 # Ignore all environment files (except templates).
-/.env*
+/.env
 !/.env*.erb
 
 # Ignore all logfiles and tempfiles.
@@ -31,3 +31,14 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore coverage result
+/coverage/index.html
+
+# Ignore brakeman models
+/app/layers/infra/models/brakeman
+
+# Ignore terraform
+/infra/.terraform
+/infra/terraform.tfstate
+/infra/terraform.tfstate.backup
