update deployment name

--- a/infra/k8s/customer-service-deployment.tmpl.yaml
+++ b/infra/k8s/customer-service-deployment.tmpl.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-deployment
+  name: customer-service-deployment
   namespace: workshop
   labels:
     app: customer-service
@@ -35,15 +35,10 @@ spec:
           image: "${IMAGE_URI}"
           imagePullPolicy: Always
           ports:
-            - containerPort: 4000
+            - containerPort: 3000
           env:
             - name: DD_TRACE_HTTP_CLIENT_IGNORE_URLS
               value: "/up"
-            - name: INTERNAL_AUTH_TOKEN
-              valueFrom:
-                secretKeyRef:
-                  name: web-secret
-                  key: INTERNAL_AUTH_TOKEN
             - name: DD_TRACE_ENABLED
               value: "true"
             - name: DD_AGENT_HOST
@@ -77,10 +72,7 @@ spec:
                   name: app-config
                   key: GID
             - name: DATABASE_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: web-secret
-                  key: DATABASE_HOST
+              value: db-customer-service
             - name: DATABASE_USERNAME
               valueFrom:
                 secretKeyRef:
@@ -91,21 +83,6 @@ spec:
                 secretKeyRef:
                   name: web-secret
                   key: DATABASE_PASSWORD
-            - name: JWT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: web-secret
-                  key: JWT_SECRET
-            - name: SMTP_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: web-secret
-                  key: SMTP_USERNAME
-            - name: SMTP_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: web-secret
-                  key: SMTP_PASSWORD
             - name: SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef:
@@ -121,13 +98,13 @@ spec:
           readinessProbe:
             httpGet:
               path: /up
-              port: 4000
+              port: 3000
             initialDelaySeconds: 5
             periodSeconds: 60
           livenessProbe:
             httpGet:
               path: /up
-              port: 4000
+              port: 3000
             initialDelaySeconds: 10
             periodSeconds: 60
       restartPolicy: Always
