--- a/infra/k8s/web-secret.tmpl.yaml
+++ b/infra/k8s/web-secret.tmpl.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: web-secret
+  name: customer-service-secret
   namespace: workshop
 type: Opaque
 data:
