--- a/infra/k8s/web-hpa.yaml
+++ b/infra/k8s/web-hpa.yaml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: web-hpa
+  name: customer-service-hpa
   namespace: workshop
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: web-deployment
+    name: customer-service-deployment
   minReplicas: 1
   maxReplicas: 6
   metrics:
