--- a/infra/k8s/customer-service-deployment.tmpl.yaml
+++ b/infra/k8s/customer-service-deployment.tmpl.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-deployment
+  name: customer-service-deployment
   namespace: workshop
   labels:
     app: customer-service
