--- a/infra/k8s/web-hpa.yaml
+++ b/infra/k8s/web-hpa.yaml
@@ -7,7 +7,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: web-deployment
+    name: customer-service-deployment
   minReplicas: 1
   maxReplicas: 6
   metrics:
